tests/NormalTests/paczka1/small_fuzzy/82755927.err
Error in line 12: zU1kLVGqDKs S633 53,9
Error in line 4: 4J8R4o A587 47,3
